--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Tomoko",
+  "author": "Tomoko & Kycb42148",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.5.3"
